--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@ body{
     padding-top: 2%;
     text-align: left;
 }
+.main .row .col-3{
+    text-align: left;
+    padding: 10px;
+}
 
 
 @media only screen and (min-width: 750px) and (max-width: 1280px) {
@@ -80,6 +84,7 @@ body{
 .main > div:first-child{
     padding: 0px 50px 50px 50px;
 }
+
 
 }
 
@@ -127,6 +132,13 @@ body{
 .main > div{
     padding: 10px ;
 }
+.main .row .col-3 img{
+    float: left;
+    margin-right: 10px;
+}
+.main .row .col-3 p{
+    text-align: left;
+}
 }
 </style>
 </head>
@@ -153,6 +165,7 @@ body{
                         <h3><strong>Lorem ipsum dolor sit amet</strong></h3>
                         <img src="Screenshot_36.png" alt="">
                         <p>
+                           
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis architecto enim earum, ullam quis velit illo numquam ipsa consequuntur, non praesentium, quaerat cupiditate et corrupti repellendus quod dignissimos! Excepturi, odit.
 
                         </p>
